--- a/_css/style.css
+++ b/_css/style.css
@@ -38,17 +38,21 @@ header a:hover{
 }
 
 header nav img{
-    width: 60px;
+    width: 50px;
+}
+
+.navbar{
+    padding: 0px 40px 0px 20px;
 }
 
 /* menu */
-nav.navbar-transparente{
+.navbar-transparente{
     background: rgba(0,0,0,0.7);
 }
 
 .navbar-expand-md .navbar-nav .nav-link{
     color: white;
-    font-size: 1.2em;
+    font-size: 1em;
 }
 
 .navbar-expand-md .navbar-nav .nav-link:hover{
