--- a/_css/style.css
+++ b/_css/style.css
@@ -112,6 +112,10 @@ section#home h1{
     color: black;
 }
 
+.carousel-control-next, .carousel-control-prev{
+    width: 5%;
+}
+
 
 /* Formatação serviços
 ----------------------------------------------------*/
